# slurm

./: configure.ac
src/plugins/job_submit/: Makefile.am
src/plugins/job_submit/sdumont/: LEIAME  Makefile.am  job_submit_sdumont.c
